--- a/app-ui/src/app/components/layout/menu/menu.component.html
+++ b/app-ui/src/app/components/layout/menu/menu.component.html
@@ -18,7 +18,7 @@
       >
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
+            <a class="nav-link active" aria-current="page" href="dashboard/register" >Cadastro</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Features</a>
